docs: better document list tables endpoint
